added style code

--- a/index.html
+++ b/index.html
@@ -8,9 +8,30 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <h1>Blabla</h1>
-    </header>
+<main>
+    <div class="content">
+        <div class="card-container">
+            <div class=" card-face face-1">
+                <div class="top-part">
+                    <div class="logo">
+                        <img src="img/logo.png" alt="Nike Logo">
+                    </div>
+                    <h2>Nike revolution 5</h2>
+                    <div class="shoe-info">
+                        <span class="shoe-new">New</span>
+                        <span class="shoe-year">2021</span>
+                    </div>
+                </div>
+                <div class="bottom-part">
+                    <h2 class="shoe-price"><span>$</span>130.00</h2>
+                    <div class="right-arrow"><img src="img/pfeil.png" alt="Pfeil"></div>
+                </div>
+            </div>
+            <div class="card-face face-2"></div>
+        </div>
+
+    </div>
+</main>
 
     
 
