--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -28,6 +29,33 @@
                 </div>
             </div>
             <div class="card-face face-2"></div>
+            <div class="top-part">
+                <div class="header">
+                    <h3 class="heading">Epic Shoes</h3>
+                    <a href="#" class="wish">
+                        <i class="far fa-heart"></i>
+                    </a>
+                </div>
+                <ul class="features">
+                    <li>Smooth & Fast</li>
+                    <li>Lightweight</li>
+                    <li>Best For Running</li>
+                </ul>
+                <div class="color-wrap">
+                    <span>Color:</span>
+                    <div class="colors">
+                        <span class="color blue active"></span>
+                        <span class="color black"></span>
+                        <span class="color white"></span>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="buy-wrap">
+                <a href="#" class="buy">
+                    Add to cart <i class="fas fa-shopping-cart"></i>
+                </a>
+            </div>
         </div>
 
     </div>
