--- a/index.html
+++ b/index.html
@@ -14,34 +14,35 @@
         <div class="card-container">
             <div class=" card-face face-1">
                 <div class="top-part">
-                    <div class="logo">
+                    <div class="logo hide">
                         <img src="img/logo.png" alt="Nike Logo">
                     </div>
-                    <h2>Nike revolution 5</h2>
+                    <h2 class="hide">Nike revolution 5</h2>
                     <div class="shoe-info">
-                        <span class="shoe-new">New</span>
-                        <span class="shoe-year">2021</span>
+                        <span class="shoe-new hide">New</span>
+                        <span class="shoe-year hide">2021</span>
                     </div>
                 </div>
                 <div class="bottom-part">
-                    <h2 class="shoe-price"><span>$</span>130.00</h2>
-                    <div class="right-arrow"><img src="img/pfeil.png" alt="Pfeil"></div>
+                    <h2 class="shoe-price hide"><span>$</span>130.00</h2>
+                    <div class="right-arrow hide"><img src="img/pfeil.png" alt="Pfeil"></div>
                 </div>
             </div>
-            <div class="card-face face-2"></div>
+
+            <div class="card-face face-2">
             <div class="top-part">
                 <div class="header">
-                    <h3 class="heading">Epic Shoes</h3>
-                    <a href="#" class="wish">
+                    <h3 class="heading hide">Epic Shoes</h3>
+                    <a href="#" class="wish hide">
                         <i class="far fa-heart"></i>
                     </a>
                 </div>
-                <ul class="features">
+                <ul class="features hide">
                     <li>Smooth & Fast</li>
                     <li>Lightweight</li>
                     <li>Best For Running</li>
                 </ul>
-                <div class="color-wrap">
+                <div class="color-wrap hide">
                     <span>Color:</span>
                     <div class="colors">
                         <span class="color blue active"></span>
@@ -50,12 +51,18 @@
                     </div>
                 </div>
             </div>
-            
-            <div class="buy-wrap">
-                <a href="#" class="buy">
-                    Add to cart <i class="fas fa-shopping-cart"></i>
-                </a>
+                <div class="buy-wrap">
+                    <a href="#" class="buy hide">
+                        Add to cart <i class="fas fa-shopping-cart"></i>
+                    </a>
+                </div>
+        </div>
+
+        <div class="shoe-image-wrapper">
+            <div class="shoe-img">
+                <img src="img/shoe.png" alt="Nike" class="shoe">
             </div>
+        </div>
         </div>
 
     </div>
