--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <div class="logo hide">
                         <img src="img/logo.png" alt="Nike Logo">
                     </div>
-                    <h2 class="hide">Nike revolution 5</h2>
+                    <h2 class="hide">Nike Revolution 7</h2>
                     <div class="shoe-info">
                         <span class="shoe-new hide">New</span>
                         <span class="shoe-year hide">2021</span>
